Update changelog and fix spacing

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -750,7 +750,7 @@ nav > ul li a:active {
 		flex-grow: 1;
 		flex-direction: row;
 		flex-wrap: wrap;
-		margin-top: 11px;
+		margin-top: 60px;
 	}
 
 	.feature {
@@ -785,7 +785,7 @@ nav > ul li a:active {
 		flex-grow: 1;
 		flex-direction: row;
 		flex-wrap: wrap;
-		margin-top: 11px;
+		margin-top: 50px;
 	}
 
 	.feature {
